gitops/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-application
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - host: laravel-app.example # DNS -> AWS Route 53
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-application
                port:
                  number: 80
